kubernetes/rails_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rails-deployment
  labels:
    app: rails-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rails-deployment
  template:
    metadata:
      labels:
        app: rails-deployment
    spec:
      containers:
      - name: rails-deployment
        image: rukomoynikov/bravado:v0.1
        command: ["bundle", "exec", "rails", "s", "-b", "0.0.0.0"]
        ports:
        - containerPort: 3000
