kubernetes/rails_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rails-service
spec:
  selector:
    app: rails-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
