kubernetes/rails_app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sheshenya-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sheshenya.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: rails-service
          servicePort: 80
